# flask_ollama_web

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.py  setup.py
flask_ollama_web/: __init__.py  __main__.py  cli.py  routes.py  userdb.py
flask_ollama_web.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flask_ollama_web/static/: main.js  styles.css
flask_ollama_web/templates/: change_password.html  change_passwords.html  index.html  login.html  register.html
